added simple midi parsing

--- a/app/index.html
+++ b/app/index.html
@@ -18,17 +18,7 @@
     </head>
     <body>
     <div class="container" style="margin-top:50px">
-        <div class="hero-unit">
-            <h1>Wotcha!</h1>
-            <p>You now have</p>
-            <ul>
-                <li>HTML7 Boilerplate</li>
-                <li>Twitter Bootstrap</li>
-                <li>RequireJS</li>
-            </ul>
-            <p>installed.</p>
-            <h3>Enjoy coding! - Yeoman</h3>
-        </div>
+      <input type="file" id="file-input"/>
     </div>
 
         <!--[if lt IE 7]>
