Slight additions and tweaks.

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
         
         <link rel="stylesheet" href="styles/main.css">
         <script src="scripts/vendor/modernizr.min.js"></script>
+        <title>HarmonicScore</title>
     </head>
     <body>
     <div class="container" style="margin-top:50px">
@@ -29,9 +30,17 @@
             <p>installed.</p>
             <h3>Enjoy coding! - Yeoman</h3>
             <div id='footer'>
-                A project by <a href="http://twitter.com/AaronSoloway">@AaronSoloway</a> and <a href="https://twitter.com/rmcclellan">@RMcClellan</a>. First hacked for <a href="http://boston.musichackday.org">Music Hack Day Boston</a> Twenty-Hundred and Twelve.
+                <div align="center">
+                    A project by <a href="http://twitter.com/AaronSoloway">@AaronSoloway</a> and <a href="https://twitter.com/rmcclellan">@RMcClellan</a>
+                </div>
                 <br>
-                Inspired by <a href="http://www.sonicdesign.org/">Sonic Design</a> by <a href="http://www.sonicdesign.org/cogan.htm">Robert Cogan</a> and <a href="http://www.sonicdesign.org/escot.htm">Pozzi Escot</a> (recommended by Dave Flaherty from <a href="http://www.cuddle-magic.com/">Cuddle Magic</a>), <a href="http://www.musanim.com/">The Music Animation Machine</a> (thanks to <a href="http://www.edwardtufte.com/tufte/">Edward Tufte</a>'s <a href="http://www.edwardtufte.com/bboard/">forum</a>), <a href="http://www.amazon.com/Harmonograph-Visual-Guide-Mathematics-Wooden/dp/0802714099">Harmonograph A Visual Guide to the Mathematics of Music</a> by Anthony Ashton, and <a href="http://www.amazon.com/Harmonic-Experience-Harmony-Natural-Expression/dp/0892815604">Harmonic Experience: Tonal Harmony from Its Natural Origins to Its Modern Expression</a> by <a href="http://en.wikipedia.org/wiki/W._A._Mathieu">W. A. Mathieu</a> (discovered thanks to the, apparently deceased, blog of <a href="http://www.lloydwatts.com/">Lloyd Watts</a>, founder of <a href="http://www.audience.com/">Audience</a>).
+                <div align="justify">
+                    Inspired by <a href="http://www.sonicdesign.org/">Sonic Design</a> by <a href="http://www.sonicdesign.org/cogan.htm">Robert Cogan</a> and <a href="http://www.sonicdesign.org/escot.htm">Pozzi Escot</a> (recommended by Dave Flaherty from <a href="http://www.cuddle-magic.com/">Cuddle Magic</a>), <a href="http://www.musanim.com/">The Music Animation Machine</a> (thanks to <a href="http://www.edwardtufte.com/tufte/">Edward Tufte</a>'s <a href="http://www.edwardtufte.com/bboard/">forum</a>), <a href="http://www.amazon.com/Harmonograph-Visual-Guide-Mathematics-Wooden/dp/0802714099">Harmonograph A Visual Guide to the Mathematics of Music</a> by Anthony Ashton, and <a href="http://www.amazon.com/Harmonic-Experience-Harmony-Natural-Expression/dp/0892815604">Harmonic Experience: Tonal Harmony from Its Natural Origins to Its Modern Expression</a> by <a href="http://en.wikipedia.org/wiki/W._A._Mathieu">W. A. Mathieu</a> (discovered thanks to the, apparently deceased, blog of <a href="http://www.lloydwatts.com/">Lloyd Watts</a>, founder of <a href="http://www.audience.com/">Audience</a>).
+                </div>
+                <br>
+                <div align="center">
+                    First hacked for <a href="http://boston.musichackday.org">Music Hack Day Boston</a> Twenty-Hundred and Twelve
+                </div>
             </div>
         </div>
     </div>
