--- a/app/index.html
+++ b/app/index.html
@@ -6,23 +6,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>HarmonicScore</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-
+        <script src="components/raphael/raphael.js"></script>
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        
         <link rel="stylesheet" href="styles/main.css">
         <script src="scripts/vendor/modernizr.min.js"></script>
-        <title>HarmonicScore</title>
     </head>
     <body>
     <div class="container" style="margin-top:50px">
         <div class="hero-unit">
-        <input type="file" id="file-input"/>
-            <h1>Wotcha!</h1>
-            <p>You now have</p>
+            <h1>HarmonicScore</h1>
+            <p>Harmony. Like you've never seen it.</p>
+            <input type="file" id="file-input"/>
             <ul>
                 <li>HTML7 Boilerplate</li>
                 <li>Twitter Bootstrap</li>
@@ -32,11 +30,11 @@
             <h3>Enjoy coding! - Yeoman</h3>
             <div id='footer'>
                 <div align="center">
-                    A project by <a href="http://twitter.com/AaronSoloway">@AaronSoloway</a> and <a href="https://twitter.com/rmcclellan">@RMcClellan</a>
+                    A project by <a href="http://twitter.com/AaronSoloway">@AaronSoloway</a> and <a href="http://twitter.com/rmcclellan">@RMcClellan</a>
                 </div>
                 <br>
                 <div align="justify">
-                    Inspired by <a href="http://www.sonicdesign.org/">Sonic Design</a> by <a href="http://www.sonicdesign.org/cogan.htm">Robert Cogan</a> and <a href="http://www.sonicdesign.org/escot.htm">Pozzi Escot</a> (recommended by Dave Flaherty from <a href="http://www.cuddle-magic.com/">Cuddle Magic</a>), <a href="http://www.musanim.com/">The Music Animation Machine</a> (thanks to <a href="http://www.edwardtufte.com/tufte/">Edward Tufte</a>'s <a href="http://www.edwardtufte.com/bboard/">forum</a>), <a href="http://www.amazon.com/Harmonograph-Visual-Guide-Mathematics-Wooden/dp/0802714099">Harmonograph A Visual Guide to the Mathematics of Music</a> by Anthony Ashton, and <a href="http://www.amazon.com/Harmonic-Experience-Harmony-Natural-Expression/dp/0892815604">Harmonic Experience: Tonal Harmony from Its Natural Origins to Its Modern Expression</a> by <a href="http://en.wikipedia.org/wiki/W._A._Mathieu">W. A. Mathieu</a> (discovered thanks to the, apparently deceased, blog of <a href="http://www.lloydwatts.com/">Lloyd Watts</a>, founder of <a href="http://www.audience.com/">Audience</a>).
+                    Inspired by <a href="http://www.sonicdesign.org/">Sonic Design</a> by <a href="http://www.sonicdesign.org/cogan.htm">Robert Cogan</a> and <a href="http://www.sonicdesign.org/escot.htm">Pozzi Escot</a> (recommended by Dave Flaherty from <a href="http://cuddlemagic.bandcamp.com/">Cuddle Magic</a>), <a href="http://www.musanim.com/">The Music Animation Machine</a> (found on <a href="http://www.edwardtufte.com/tufte/">Edward Tufte</a>'s <a href="http://www.edwardtufte.com/bboard/">forum</a>), <a href="http://www.amazon.com/Harmonograph-Visual-Guide-Mathematics-Wooden/dp/0802714099">Harmonograph A Visual Guide to the Mathematics of Music</a> by Anthony Ashton, and <a href="http://www.amazon.com/Harmonic-Experience-Harmony-Natural-Expression/dp/0892815604">Harmonic Experience: Tonal Harmony from Its Natural Origins to Its Modern Expression</a> by <a href="http://en.wikipedia.org/wiki/W._A._Mathieu">W. A. Mathieu</a> (discovered thanks to the, apparently deceased, blog of <a href="http://www.lloydwatts.com/">Lloyd Watts</a>, founder of <a href="http://www.audience.com/">Audience</a>).
                 </div>
                 <br>
                 <div align="center">
