drawing midi notes

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -21,13 +17,6 @@
             <h1>HarmonicScore</h1>
             <p>Harmony. Like you've never seen it.</p>
             <input type="file" id="file-input"/>
-            <ul>
-                <li>HTML7 Boilerplate</li>
-                <li>Twitter Bootstrap</li>
-                <li>RequireJS</li>
-            </ul>
-            <p>installed.</p>
-            <h3>Enjoy coding! - Yeoman</h3>
             <div id='footer'>
                 <div align="center">
                     A project by <a href="http://twitter.com/AaronSoloway">@AaronSoloway</a> and <a href="http://twitter.com/rmcclellan">@RMcClellan</a>
@@ -42,7 +31,12 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div id="scoreContainer">
+          <div id="score" height="500px"></div>
+        </div>
+      </div>
+    </body>
+
 
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
