Correted to naming to "HarmonicScore" Formatted text for appearance.

--- a/app/index.html
+++ b/app/index.html
@@ -17,15 +17,13 @@
       <div>
         <div class="navbar navbar-fixed-top">
           <div class="navbar-inner">
-            <div class="container">
               <div class="nav-collapse collapse">
                 <ul class="nav">
-                  <li class="brand">Harmoniscore</li>
+                  <li class="brand">HarmonicScore</li>
                   <li><p class="navbar-text">Harmony. Like you've never seen it.</p></li>
                   <li><a style="cursor:pointer" onclick="$('input[id=file-input]').click();">Choose File</a></li>
                 </ul>
               </div>
-            </div>
           </div>
         </div>
         <div id="scoreContainer" style="display:inline-block">
@@ -33,33 +31,37 @@
         </div>
         <div class="navbar navbar-fixed-bottom">
           <div class="navbar-inner">
-            <div class="container">
               <div class="nav-collapse collapse">
                 <ul class="nav">
-                  <li><a style="cursor:pointer" href="#about" data-toggle="modal">About Harmoniscore</a></li>
+                  <li><a style="cursor:pointer" href="#about" data-toggle="modal">About HarmonicScore</a></li>
                 </ul>
-              </div>
             </div>
           </div>
         </div>
 
       </div>
-      <div class="modal fade" id="about">
+      <div class="modal fade" id="about" align="center">
         <div class="modal-header">
           <a class="close" data-dismiss="modal">&times;</a>
-          <h3>About Harmoniscore</h3>
+          <h3>About HarmonicScore</h3>
         </div>
         <div class="modal-body">
           <div class='modal-body'>
-            <p>
+            <br>
+            <p style="text-align: center;">
               A project by <a href="http://twitter.com/AaronSoloway">@AaronSoloway</a> and <a href="http://twitter.com/rmcclellan">@RMcClellan</a>
             </p>
-            <p>
+            <br>
+            <br>
+            <p style="text-align: justify">
               Inspired by <a href="http://www.sonicdesign.org/">Sonic Design</a> by <a href="http://www.sonicdesign.org/cogan.htm">Robert Cogan</a> and <a href="http://www.sonicdesign.org/escot.htm">Pozzi Escot</a> (recommended by Dave Flaherty from <a href="http://cuddlemagic.bandcamp.com/">Cuddle Magic</a>), <a href="http://www.musanim.com/">The Music Animation Machine</a> (found on <a href="http://www.edwardtufte.com/tufte/">Edward Tufte</a>'s <a href="http://www.edwardtufte.com/bboard/">forum</a>), <a href="http://www.amazon.com/Harmonograph-Visual-Guide-Mathematics-Wooden/dp/0802714099">Harmonograph A Visual Guide to the Mathematics of Music</a> by Anthony Ashton, and <a href="http://www.amazon.com/Harmonic-Experience-Harmony-Natural-Expression/dp/0892815604">Harmonic Experience: Tonal Harmony from Its Natural Origins to Its Modern Expression</a> by <a href="http://en.wikipedia.org/wiki/W._A._Mathieu">W. A. Mathieu</a> (discovered thanks to the, apparently deceased, blog of <a href="http://www.lloydwatts.com/">Lloyd Watts</a>, founder of <a href="http://www.audience.com/">Audience</a>).
             </p>
-            <p>
+            <br>
+            <br>
+            <p style="text-align: center;">
               First hacked for <a href="http://boston.musichackday.org">Music Hack Day Boston</a> Twenty-Hundred and Twelve
             </p>
+            <br>
           </div>
         </div>
       </div>
