--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,13 @@
                   <li class="brand">Harmoniscore</li>
                   <li><p class="navbar-text">Harmony. Like you've never seen it.</p></li>
                   <li><a style="cursor:pointer" onclick="$('input[id=file-input]').click();">Choose File</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Display Mode</a>
+                    <ul class="dropdown-menu">
+                      <li class="active"><a id="colorSelect" href="#">Color</a></li>
+                      <li><a href="#" id="bwSelect">Black and White</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </div>
             </div>
