--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,9 @@
                     <ul class="dropdown-menu">
                       <li class="active"><a id="colorSelect" href="#">Color</a></li>
                       <li><a href="#" id="bwSelect">Black and White</a></li>
+                      <li class="divider"></li>
+                      <li class="active"><a id="logScale" href="#">Logarithmic Scale</a></li>
+                      <li><a href="#" id="linScale">Linear Scale</a></li>
                     </ul>
                   </li>
                 </ul>
