--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <ul class="dropdown-menu">
                       <li class="active"><a id="colorSelect" href="#">Color</a></li>
                       <li><a href="#" id="bwSelect">Black and White</a></li>
+                      <li class="divider"></li>
+                      <li class="active"><a id="logScale" href="#">Logarithmic Scale</a></li>
+                      <li><a href="#" id="linScale">Linear Scale</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -92,5 +95,5 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
     
-    <script src="scripts/c7fe8e23.amd-app.js"></script>
+    <script src="scripts/c556bb14.amd-app.js"></script>
 </html>
