--- a/app/index.html
+++ b/app/index.html
@@ -56,17 +56,17 @@
           <div class='modal-body'>
             <br>
             <p style="text-align: center;">
-              A project by <a href="http://twitter.com/AaronSoloway">@AaronSoloway</a> and <a href="http://twitter.com/rmcclellan">@RMcClellan</a>
+              A project by <a href="http://twitter.com/AaronSoloway" target=_blank>@AaronSoloway</a> and <a href="http://twitter.com/rmcclellan" target=_blank>@RMcClellan</a>
             </p>
             <br>
             <br>
             <p style="text-align: justify">
-              Inspired by <a href="http://www.sonicdesign.org/">Sonic Design</a> by <a href="http://www.sonicdesign.org/cogan.htm">Robert Cogan</a> and <a href="http://www.sonicdesign.org/escot.htm">Pozzi Escot</a> (recommended by Dave Flaherty from <a href="http://cuddlemagic.bandcamp.com/">Cuddle Magic</a>), <a href="http://www.musanim.com/">The Music Animation Machine</a> (found on <a href="http://www.edwardtufte.com/tufte/">Edward Tufte</a>'s <a href="http://www.edwardtufte.com/bboard/">forum</a>), <a href="http://www.amazon.com/Harmonograph-Visual-Guide-Mathematics-Wooden/dp/0802714099">Harmonograph A Visual Guide to the Mathematics of Music</a> by Anthony Ashton, and <a href="http://www.amazon.com/Harmonic-Experience-Harmony-Natural-Expression/dp/0892815604">Harmonic Experience: Tonal Harmony from Its Natural Origins to Its Modern Expression</a> by <a href="http://en.wikipedia.org/wiki/W._A._Mathieu">W. A. Mathieu</a> (discovered thanks to the, apparently deceased, blog of <a href="http://www.lloydwatts.com/">Lloyd Watts</a>, founder of <a href="http://www.audience.com/">Audience</a>).
+              Inspired by <a href="http://www.sonicdesign.org/" target=_blank>Sonic Design</a> by <a href="http://www.sonicdesign.org/cogan.htm" target=_blank>Robert Cogan</a> and <a href="http://www.sonicdesign.org/escot.htm" target=_blank>Pozzi Escot</a> (recommended by Dave Flaherty from <a href="http://cuddlemagic.bandcamp.com/" target=_blank>Cuddle Magic</a>), <a href="http://www.musanim.com/" target=_blank>The Music Animation Machine</a> (found on <a href="http://www.edwardtufte.com/tufte/" target=_blank>Edward Tufte</a>'s <a href="http://www.edwardtufte.com/bboard/" target=_blank>forum</a>), <a href="http://www.amazon.com/Harmonograph-Visual-Guide-Mathematics-Wooden/dp/0802714099" target=_blank>Harmonograph A Visual Guide to the Mathematics of Music</a> by Anthony Ashton, and <a href="http://www.amazon.com/Harmonic-Experience-Harmony-Natural-Expression/dp/0892815604" target=_blank>Harmonic Experience: Tonal Harmony from Its Natural Origins to Its Modern Expression</a> by <a href="http://en.wikipedia.org/wiki/W._A._Mathieu" target=_blank>W. A. Mathieu</a> (discovered thanks to the, apparently deceased, blog of <a href="http://www.lloydwatts.com/" target=_blank>Lloyd Watts</a>, founder of <a href="http://www.audience.com/" target=_blank>Audience</a>).
             </p>
             <br>
             <br>
             <p style="text-align: center;">
-              First hacked for <a href="http://boston.musichackday.org">Music Hack Day Boston</a> Twenty-Hundred and Twelve
+              First hacked for <a href="http://boston.musichackday.org" target=_blank>Music Hack Day Boston</a> Twenty-Hundred and Twelve
             </p>
             <br>
           </div>
@@ -84,12 +84,18 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
         
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
+        <script type="text/javascript">
+
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-36249349-1']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+
         </script>
     
     <!-- build:js scripts/amd-app.js -->
