Added options for beats

--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,12 @@
                       <li class="active"><a id="colorSelect" href="#">Color</a></li>
                       <li><a href="#" id="bwSelect">Black and White</a></li>
                       <li class="divider"></li>
+
                       <li class="active"><a id="logScale" href="#">Logarithmic Scale</a></li>
                       <li><a href="#" id="linScale">Linear Scale</a></li>
+                      <li class="divider"></li>
+                      <li class="active"><a id="animateBeats" href="#">Animate Beats</a></li>
+                      <li><a href="#" id="highlightBeats">Highlight Beats</a></li>
                     </ul>
                   </li>
                 </ul>
