--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,25 @@
                       <li><a href="#" id="highlightBeats">Highlight Beats</a></li>
                     </ul>
                   </li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Intonation</a>
+                    <ul class="dropdown-menu">
+                      <li class="active"><a id="equalTemperament" href="#">Equal</a></li>
+                      <li class="divider"></li>
+                      <li><a href="#" id="0" class="limit5">Just Intonation - C</a></li>
+                      <li><a href="#" id="1" class="limit5">Just Intonation - C#</a></li>
+                      <li><a href="#" id="2" class="limit5">Just Intonation - D</a></li>
+                      <li><a href="#" id="3" class="limit5">Just Intonation - Eb</a></li>
+                      <li><a href="#" id="4" class="limit5">Just Intonation - E</a></li>
+                      <li><a href="#" id="5" class="limit5">Just Intonation - F</a></li>
+                      <li><a href="#" id="6" class="limit5">Just Intonation - F#</a></li>
+                      <li><a href="#" id="7" class="limit5">Just Intonation - G</a></li>
+                      <li><a href="#" id="8" class="limit5">Just Intonation - Ab</a></li>
+                      <li><a href="#" id="9" class="limit5">Just Intonation - A</a></li>
+                      <li><a href="#" id="10" class="limit5">Just Intonation - Bb</a></li>
+                      <li><a href="#" id="11" class="limit5">Just Intonation - B</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </div>
           </div>
