added help and aria json

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
           <div class="navbar-inner">
               <div class="nav-collapse collapse">
                 <ul class="nav">
+                  <li><a style="cursor:pointer" href="#help" data-toggle="modal">Help</a></li>
                   <li><a style="cursor:pointer" href="#about" data-toggle="modal">About HarmonicScore</a></li>
                 </ul>
             </div>
@@ -73,6 +74,26 @@
         </div>
 
       </div>
+      <div class="modal fade" id="help" align="center">
+        <div class="modal-header">
+          <a class="close" data-dismiss="modal">&times;</a>
+          <h3>HarmonicScore Help</h3>
+        </div>
+        <div class="modal-body">
+          <div class='modal-body'>
+            <br>
+            <p style="text-align: center;">
+              HarmonicScore is a way of visualizing the harmonic interactions implicit in musical scores.  The X-axis represents time, and the Y-axis represents frequency.  Stronger, wider lines represent notes and thinner, lighter lines represent their harmonics.  If two harmonics are close enough together in frequency to cause audible beating effects, their interaction is highlighted by a subtle blinking.  The more noticable the beating interaction, the more intense the highlight.
+            </p>
+            <br>
+            <br>
+            <p style="text-align: justify">
+            </p>
+          </div>
+        </div>
+      </div>
+
+
       <div class="modal fade" id="about" align="center">
         <div class="modal-header">
           <a class="close" data-dismiss="modal">&times;</a>
