--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,14 @@
         <title>HarmonicScore</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <script src="components/raphael/raphael.js"></script>
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        
-        <link href="styles/bootstrap.css" rel="stylesheet" media="screen">
+        <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
-        <script src="scripts/vendor/modernizr.min.js"></script>
+        <link href="styles/bootstrap.css" rel="stylesheet" media="screen">
+        <!-- endbuild -->
+        <!-- build:js scripts/vendor/modernizr.js -->
+        <script src="bower_components/modernizr/modernizr.js"></script>
+        <script src="bower_components/raphael/raphael.js"></script>
+        <!-- endbuild -->
     </head>
     <body>
       <input type="file" id="file-input" style="display:none"></input>
